chore(demo): done demo things and changes